--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "potluck",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
     "method-override": "^3.0.0",
+    "mongoose": "^5.3.6",
     "morgan": "^1.9.1"
   }
 }
